# Fuck_Math

./: CMakeLists.txt  README.md
ini_phraser/: ini.h
libharu/inc/: hpdf_config.h
rc/: resource.rc
src/: main.c
